--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>BD-Spleef</groupId>
     <artifactId>BD-Spleef</artifactId>
-    <version>1.7.0-SNAPSHOT</version>
+    <version>1.0</version>
     <repositories>
         <repository>
             <id>enginehub-maven</id>
