--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.7-DEV-${BUILD_NUMBER}</version>
+            <version>2.10.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
